HelloUltraviolet/Fixtures/RejectedSource/Expressions/SyncContainsYield/Expected.uv
//! Expected diagnostic metadata for the SyncContainsYield rejected-source specimen.

expectedDiagnostic("E-CON-0212", "rule.21.Sync-Yield-Err")
